# Raspberry_IPC_DBUS

./: CMakeLists.txt  Makefile  README.md
config/: org.solid.button.conf  org.solid.led.conf
docs/: dbus.drawio
include/: button_interface.h  dbus_endpoint.h  led_interface.h
src/: button_interface.c  button_process.c  launch_processes.c  led_interface.c  led_process.c
src/platform/pc/: button_process.c  led_process.c
